131) kernel: net: ipv6: make ipv6_is_mld() inline and use it from ip6_mc_input().<br>
132) kernel: net: ipv6: make MLD packets to only be processed locally.<br>
133) kernel: net: ipv6: fix MLD Query message check.<br>
134) kernel: net: netfilter: ip[6]t_REJECT: fix wrong transport header pointer in TCP reset.<br>
135) kernel: net: netfilter: ip6t_REJECT: skip checksum verification for outgoing ipv6 packets.<br>
136) kenrel: net: netfilter: bridge: don't leak skb in error paths.<br>
137) kernel: net: packet: read num_members once in packet_rcv_fanout().<br>
138) kernel: net: packet: avoid out of bounds read in round robin fanout.<br>
139) kernel: backport new ASIX AX88179/178A and Realtek RTL8152/8153 USB 3.0/2.0 Ethernet drivers.<br>
<br>
<br>
<b>3.4.x</b><br>
1) build_system: add new metal 7620a+7612ne internal pa/lna sd usb 16/128Mb sample.<br>
2) build_system: enable hotspot support for all devices (need test webui fixup and configure review).<br>
3) coova-chilli: move to use xt_coova netfilter module instead of libpcap.<br>
4) kernel: tcp: fix slow start after idle vs TSO/GSO.<br>
5) kernel: ralink_arch: sync with SDK 5.0.0.0.<br>
6) kernel: ralink_ppe: sync with 5.0.0.0 SDK.<br>
7) kernel: ralink_sdxc: fix MT7628 SDXC init.<br>
<br>
<br>
<b>TODO:</b><br>
1) full russian ui (work end ~95%).<br>
2) need fix ui for channel 5GHz select (allow 36-64 and 136—165 channels for RU AbandRegion=7).<br>
3) need add subchannel select for 5GHz module.<br>
4) need add irqbalance in WebUI (in last stage of 7621 dev).<br>
5) port support l2tp/pptp hardware NAT offload (really needed? in sdk very ugly code).<br>
6) in fair faif future: need add in firewall support xt_time matches for parental control.<br>
7) in fair faif future: need add davfs2 webui for managment online disk drives (as yandex disk and others very slow, really need?).<br>
8) in fair fair future: need add scripts and webui for support 3g usb dongles uses qmi protocol.<br>
<br>
<br>
<br>