@@ -99,17 +99,20 @@ static struct nand_ecclayout nand_oob_128 = {
 
 static const flashdev_info gen_FlashTable[]= {
 	/* Macronix */
-	{"MX30LF1G08AA",    0xC2F1, 0x801DC2, 4, 8,  128, 128, 2048,  64, 0x00044333, 0},
+	{"MX30LF1G08AA",    0xC2F1, 0x801DC2, 4, 8,  128, 128, 2048,  64, 0x00844333, 0},
+	{"MX30LF1G18AC",    0xC2F1, 0x809502, 4, 8,  128, 128, 2048,  64, 0x00444332, 0},
+	{"MX30LF2G18AC",    0xC2DA, 0x909506, 5, 8,  256, 128, 2048,  64, 0x00444332, 0},
+	{"MX30LF4G18AC",    0xC2DC, 0x909556, 5, 8,  512, 128, 2048,  64, 0x00444332, 0},
 
 	/* ESMT */
-	{"F59L1G81A",       0x92F1, 0x8095FF, 4, 8,  128, 128, 2048,  64, 0x00044333, 0},
-	{"F59L2G81A",       0xC8DA, 0x909544, 5, 8,  256, 128, 2048,  64, 0x00044333, 0},
-	{"F59L4G81A",       0xC8DC, 0x909554, 5, 8,  512, 128, 2048,  64, 0x00044333, 0},
+	{"F59L1G81A",       0x92F1, 0x8095FF, 4, 8,  128, 128, 2048,  64, 0x00844333, 0},
+	{"F59L2G81A",       0xC8DA, 0x909544, 5, 8,  256, 128, 2048,  64, 0x00844333, 0},
+	{"F59L4G81A",       0xC8DC, 0x909554, 5, 8,  512, 128, 2048,  64, 0x00844333, 0},
 
 	/* Spansion */
-	{"S34ML01G100TF",   0x01F1, 0x801D01, 4, 8,  128, 128, 2048,  64, 0x00044333, 0},
-	{"S34ML02G200TF",   0x01DA, 0x909546, 5, 8,  256, 128, 2048, 112, 0x00044333, 0},
-	{"S34ML04G200TF",   0x01DC, 0x909556, 5, 8,  512, 128, 2048, 112, 0x00044333, 0},
+	{"S34ML01G100TF",   0x01F1, 0x801D01, 4, 8,  128, 128, 2048,  64, 0x00844333, 0},
+	{"S34ML02G200TF",   0x01DA, 0x909546, 5, 8,  256, 128, 2048, 112, 0x00844333, 0},
+	{"S34ML04G200TF",   0x01DC, 0x909556, 5, 8,  512, 128, 2048, 112, 0x00844333, 0},
 
 	/* Samsung */
 	{"K9K8G8000",       0xECD3, 0x519558, 5, 8, 1024, 128, 2048,  64, 0x00044333, 0},
@@ -118,8 +121,8 @@ static const flashdev_info gen_FlashTable[]= {
 	{"TC58NVG3S0F",     0x98D3, 0x902676, 5, 8, 1024, 256, 4096, 224, 0x00C25332, 0},
 
 	/* Micron */
-	{"MT29F1G08ABAEA",  0x2CF1, 0x809504, 4, 8,  128, 128, 2048,  64, 0x30C77fff, 0},
-	{"MT29F16G08ABABA", 0x2C48, 0x0026A9, 5, 8, 2048, 512, 4096, 224, 0x30C77fff, 0},
+	{"MT29F1G08ABAEA",  0x2CF1, 0x809504, 4, 8,  128, 128, 2048,  64, 0x00844333, 0},
+	{"MT29F16G08ABABA", 0x2C48, 0x0026A9, 5, 8, 2048, 512, 4096, 224, 0x00844333, 0},
 
 	{NULL,              0x0000, 0x000000, 0, 0,    0,   0,    0,   0,          0, 0},
 };
