@@ -1246,8 +1246,9 @@
 3) coova-chilli: move to use xt_coova netfilter module instead of libpcap.<br>
 4) kernel: tcp: fix slow start after idle vs TSO/GSO.<br>
 5) kernel: ralink_arch: sync with SDK 5.0.0.0.<br>
-6) kernel: ralink_ppe: sync with 5.0.0.0 SDK.<br>
-7) kernel: ralink_sdxc: fix MT7628 SDXC init.<br>
+6) kernel: ralink_sdxc: fix MT7628 SDXC init.<br>
+7) kernel: ralink_mtd: sync MT7621/MT7628 SPI/NAND flash drivers with SDK 5.0.0.0.<br>
+8) kernel: ralink_ppe: sync with 5.0.0.0 SDK.<br>
 <br>
 <br>
 <b>TODO:</b><br>
